--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -1,7 +1,8 @@
 version: "3.8"
 services:
   colectivo:
-    # Define IMAGE in the stack env (e.g., ghcr.io/<owner>/colectivo-web:latest)
+  # IMPORTANT: Use a prebuilt image (built by CI). Do NOT add a 'build:' section in Portainer.
+  # Define IMAGE in the stack env (e.g., ghcr.io/<owner>/colectivo-web:latest)
     image: ${IMAGE:-ghcr.io/owner/colectivo-web:latest}
     container_name: colectivo-web
     ports:
@@ -9,8 +10,8 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      # API_BASE_URL must be reachable by the user's browser
-      - API_BASE_URL=${API_BASE_URL:-http://colectivo-api:8080/api}
+  # FYI: API_BASE_URL is compile-time in Flutter Web and is baked into the image by CI.
+  # Changing this variable here will NOT change the app's API target.
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080"]
       interval: 30s
