--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,16 +1,30 @@
-version: "3.8"
+version: '3.8'
+
+# LOCAL ONLY: builds the image from source. Do NOT use this file in Portainer.
 services:
   colectivo:
-    image: ghcr.io/mauricioff2015/colectivo-web:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        API_BASE_URL: ${API_BASE_URL}
     container_name: colectivo-web
     ports:
       - "8080:8080"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+      - API_BASE_URL=${API_BASE_URL}
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - backend
+
+networks:
+  backend:
+    external: true
+    name: backend
