--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -10,13 +10,13 @@ services:
         API_BASE_URL: ${API_BASE_URL}
     container_name: colectivo-web
     ports:
-      - "8080:8080"
+      - "8080:80"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
       - API_BASE_URL=${API_BASE_URL}
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
