--- a/docker-compose.portainer-build.yml
+++ b/docker-compose.portainer-build.yml
@@ -24,10 +24,10 @@ services:
     image: ghcr.io/mauricioff2015/colectivo-web:latest-build
     container_name: colectivo-web
     ports:
-      - "8080:8080"
+      - "8080:80"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
