--- a/docker-compose.portainer.min.yml
+++ b/docker-compose.portainer.min.yml
@@ -4,12 +4,12 @@ services:
     image: ghcr.io/mauricioff2015/colectivo-web:latest
     container_name: colectivo-web
     ports:
-      - "8080:8080"
+      - "8080:80"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
