--- a/.github/workflows/docker-web.yml
+++ b/.github/workflows/docker-web.yml
@@ -1,3 +1,44 @@
+name: Build and Push Web Image
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    env:
+      IMAGE_NAME: ghcr.io/mauricioff2015/colectivo-web
+      API_BASE_URL: ${{ vars.API_BASE_URL || secrets.API_BASE_URL || 'http://45.130.104.156:5000/api' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+          build-args: |
+            API_BASE_URL=${{ env.API_BASE_URL }}
 name: Build and push Colectivo Web
 
 on:
